# ThermocoupleCalculator

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  conanfile.txt
.github/workflows/: build_cmake.yml  codeql-analysis.yml
cmake/: Conan.cmake
docker/: Dockerfile
include/: TypeB.h  TypeBCoefficients.h  TypeConversion.h  TypeE.h  TypeECoefficients.h  TypeJ.h  TypeJCoefficients.h  TypeK.h  TypeKCoefficients.h  TypeN.h  TypeNCoefficients.h  TypeR.h  TypeRCoefficients.h  TypeS.h  TypeSCoefficients.h  TypeT.h  TypeTCoefficients.h  VoltageTemperatureConversion.h
source/: CMakeLists.txt  TypeConversion.cpp  main.cpp
test/: CMakeLists.txt  catch_main.cpp  typeB-test.cpp  typeE-test.cpp  typeJ-test.cpp  typeK-test.cpp  typeN-test.cpp  typeR-test.cpp  typeS-test.cpp  typeT-test.cpp
